--- a/index.html
+++ b/index.html
@@ -1,42 +1,229 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>BIO MOUNTAIN - Home</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+    />
+    <link
+      href="css/materialize.min.css"
+      type="text/css"
+      rel="stylesheet"
+      media="screen,projection"
+    />
+    <link
+      href="css/estilos.css"
+      type="text/css"
+      rel="stylesheet"
+      media="screen,projection"
+    />
+    <link
+      href="css/materialize.css"
+      type="text/css"
+      rel="stylesheet"
+      media="screen,projection"
+    />
+  </head>
+  <body>
+    <header class="nav">
+      <nav class="white" role="navigation">
+        <div class="nav-wrapper container">
+          <a class="black-text" href="index.html" class=""
+            ><img class="logo_Nav" src="img/logoGrande.jpg"
+          /></a>
+          <ul class="right hide-on-med-and-down">
+            <li><a class="a_menu" href="#">Inicio</a></li>
+            <li><a class="a_menu" href="#">Productos</a></li>
+            <li><a class="a_menu" href="#">Contacto</a></li>
+            <li><a class="a_menu" href="#">Sucursales</a></li>
+          </ul>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BioMountain</title>
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
-    <link rel="stylesheet" href="css/estilos.css">
-</head>
-
-<body>
-    <header>
-        <nav class="nav-wrapper">
-            <a href="#" class="">
-                <img src="img/logo.png" alt="Logo" srcset="" class="responsive-img" class=""></a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <li><a href="collapsible.html">JavaScript</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <div class="container">
-            <h1 class="blue-text">Hola Mundo!</h1>
-            <h1 class="pink-text text-lighten-5">Hola Mundo!</h1>
-            <h1 class="light-blue">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit amet et corporis eaque modi harum deserunt animi, labore perspiciatis sequi unde, laborum, eius explicabo quod ullam alias vitae fugit fugiat?</h1>
+          <ul id="nav-mobile" class="sidenav">
+            <li><a class="a_menu" href="#">Inicio</a></li>
+            <li><a class="a_menu" href="#">Productos</a></li>
+            <li><a class="a_menu" href="#">Contacto</a></li>
+            <li><a class="a_menu" href="#">Sucursales</a></li>
+          </ul>
+          <a href="#" data-target="nav-mobile" class="sidenav-trigger"
+            ><i class="black-text material-icons">menu</i></a
+          >
         </div>
-    </main>
-    <footer>
+      </nav>
+    </header>
 
+    <main class="main_Home">
+      <div id="index-banner" class="parallax-container">
+        <div class="section no-pad-bot">
+          <div class="container">
+            <br /><br />
+            <h1 class="header center white-text text-lighten-2 titulo_Slider">
+              CONSERVA TU ALIMENTO Y TU MEDIO AMBIENTE
+            </h1>
+            <div class="row center">
+              <h5 class="header col s12 light">
+                El mejor packaging biodegradable y de la mejor calidad
+              </h5>
+            </div>
+            <div class="row center">
+              <a
+                href="http://materializecss.com/getting-started.html"
+                id="download-button"
+                class="btn-large waves-effect waves-light lighten-1 boton_ConoceComo"
+                >Conoc&eacute; como...</a
+              >
+            </div>
+            <br /><br />
+          </div>
+        </div>
+        <div class="parallax">
+          <img src="img/fotohome1.JPG" alt="Unsplashed background img 1" />
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="section">
+          <div class="row">
+            <div class="col s12 m4">
+              <div class="icon-block">
+                <h2 class="center green-text">
+                  <i class="fas fa-shopping-bag"></i>
+                </h2>
+                <h5 class="center">BOLSAS</h5>
+
+                <p class="light descripcionIcon">
+                  Bolsitas muy lindas Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Maiores quod illum porro omnis, error facere
+                  sunt corrupti ullam modi ad reiciendis distinctio eveniet
+                  obcaecati nulla fugit, tenetur ut voluptatem laudantium!
+                </p>
+              </div>
+            </div>
+
+            <div class="col s12 m4">
+              <div class="icon-block">
+                <h2 class="center green-text">
+                  <i class="fas fa-wine-bottle"></i>
+                </h2>
+                <h5 class="center">BOTELLAS</h5>
+
+                <p class="light descripcionIcon">
+                  Botellas muy lindas Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Nam culpa doloribus reiciendis quia beatae
+                  labore accusantium, quo a enim? Iste distinctio eaque ducimus
+                  dolores, impedit molestias eum consequuntur expedita? Sint.
+                </p>
+              </div>
+            </div>
+
+            <div class="col s12 m4">
+              <div class="icon-block">
+                <h2 class="center green-text">
+                  <i class="fas fa-vial"></i>
+                </h2>
+                <h5 class="center">CACATUBO</h5>
+
+                <p class="light descripcionIcon">
+                  La caquita mas rica Lorem, ipsum dolor sit amet consectetur
+                  adipisicing elit. Eligendi incidunt a error optio quis nam,
+                  vero sunt! A nobis voluptas magnam ut voluptate sit, incidunt,
+                  vero hic est, iusto expedita?
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="section">
+          <div class="row">
+            <div class="col s12 center">
+              <h3><i class="mdi-content-send brown-text"></i></h3>
+              <h3 class="green-text" style="font-weight: bold;">Aprovecha los combos Bionderistas</h4>
+              <div class="container">
+                <div class="section">
+                  <div class="row contenedor_Combos">
+                    
+                      <div class="combos light-green col s12 m41">
+                        <div class="icon-block">
+                          <h5 class="center">BASICO</h5>
+                          <p class="light descripcionIcon">
+                            combito 1 Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Accusamus iusto quae sed fuga ab
+                            necessitatibus pariatur nisi iste. Blanditiis
+                            distinctio, consequatur quam delectus soluta magni
+                            temporibus minima exercitationem ea. Reiciendis?
+                          </p>
+                        </div>
+                      </div>
+
+                      <div class="combos light-green col s12 m41">
+                        <div class="icon-block">
+                          <h5 class="center">MEDIO</h5>
+
+                          <p class="light descripcionIcon">
+                            combito 2 Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Accusamus iusto quae sed fuga ab
+                            necessitatibus pariatur nisi iste. Blanditiis
+                            distinctio, consequatur quam delectus soluta magni
+                            temporibus minima exercitationem ea. Reiciendis?
+                          </p>
+                        </div>
+                      </div>
+
+                      <div class="combos light-green col s12 m41">
+                        <div class="icon-block">
+                          <h5 class="center">PRO</h5>
+
+                          <p class="light descripcionIcon">
+                            combito 3 Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Accusamus iusto quae sed fuga ab
+                            necessitatibus pariatur nisi iste. Blanditiis
+                            distinctio, consequatur quam delectus soluta magni
+                            temporibus minima exercitationem ea. Reiciendis?
+                          </p>
+                        </div>
+                      </div>
+                    
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    <footer class="page-footer green">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">BIO MOUNTAIN</h5>
+            <p class="grey-text text-lighten-4">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero atque assumenda laborum nihil maiores nulla, perspiciatis molestiae veritatis facere voluptas qui optio aliquam praesentium sit similique ipsa culpa laboriosam officia?
+            </p>
+          </div>
+          <div class="col l3 s12 right">
+            <h5 class="white-text">Redes Sociales</h5>
+            <ul>
+              <li><a class="white-text" href="#!">Facebook</a></li>
+              <li><a class="white-text" href="#!">Instagram</a></li>
+              <li><a class="white-text" href="#!">Twitter</a></li>
+              <li><a class="white-text" href="#!">Pinterest</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+      </div>
     </footer>
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-</body>
 
+    <!--  Scripts-->
+    <script src="js/materialize.min.js"></script>
+    <script src="js/materialize.js"></script>
+  </body>
 </html>
