--- a/index.html
+++ b/index.html
@@ -1,56 +1,35 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+
+<head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>BIO MOUNTAIN - Home</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
-      crossorigin="anonymous"
-    />
-    <link
-      href="css/materialize.min.css"
-      type="text/css"
-      rel="stylesheet"
-      media="screen,projection"
-    />
-    <link
-      href="css/estilos.css"
-      type="text/css"
-      rel="stylesheet"
-      media="screen,projection"
-    />
-    <link
-      href="css/materialize.css"
-      type="text/css"
-      rel="stylesheet"
-      media="screen,projection"
-    />
-  </head>
-  <body>
-    <header class="nav">
-      <nav class="white" role="navigation">
-        <div class="nav-wrapper container">
-          <a class="black-text" href="index.html" class=""
-            ><img class="logo_Nav" src="img/logoGrande.jpg"
-          /></a>
-          <ul class="right hide-on-med-and-down">
-            <li><a class="a_menu" href="#">Inicio</a></li>
-            <li><a class="a_menu" href="#">Productos</a></li>
-            <li><a class="a_menu" href="#">Contacto</a></li>
-            <li><a class="a_menu" href="#">Sucursales</a></li>
-          </ul>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link href="css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="css/estilos.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+</head>
 
-          <ul id="nav-mobile" class="sidenav">
-            <li><a class="a_menu" href="#">Inicio</a></li>
-            <li><a class="a_menu" href="#">Productos</a></li>
-            <li><a class="a_menu" href="#">Contacto</a></li>
-            <li><a class="a_menu" href="#">Sucursales</a></li>
-          </ul>
-          <a href="#" data-target="nav-mobile" class="sidenav-trigger"
-            ><i class="black-text material-icons">menu</i></a
+<body>
+    <header class="nav">
+        <nav class="white" role="navigation">
+            <div class="nav-wrapper container">
+                <a class="black-text" href="index.html" class=""><img class="logo_Nav" src="img/logoGrande.jpg" /></a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a class="a_menu" href="#">Inicio</a></li>
+                    <li><a class="a_menu" href="#">Productos</a></li>
+                    <li><a class="a_menu" href="#">Contacto</a></li>
+                    <li><a class="a_menu" href="#">Sucursales</a></li>
+                </ul>
+
+                <ul id="nav-mobile" class="sidenav">
+                    <li><a class="a_menu" href="#">Inicio</a></li>
+                    <li><a class="a_menu" href="#">Productos</a></li>
+                    <li><a class="a_menu" href="#">Contacto</a></li>
+                    <li><a class="a_menu" href="#">Sucursales</a></li>
+                </ul>
+                <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="black-text material-icons">menu</i></a
           >
         </div>
       </nav>
@@ -62,7 +41,8 @@
           <div class="container">
             <br /><br />
             <h1 class="header center white-text text-lighten-2 titulo_Slider">
-              CONSERVA TU ALIMENTO Y TU MEDIO AMBIENTE
+              CONSERVA TU ALIMENTO Y <br>
+              TU MEDIO AMBIENTE
             </h1>
             <div class="row center">
               <h5 class="header col s12 light">
@@ -211,19 +191,20 @@
             <h5 class="white-text">Redes Sociales</h5>
             <ul>
               <li><a class="white-text" href="#!">Facebook</a></li>
-              <li><a class="white-text" href="#!">Instagram</a></li>
-              <li><a class="white-text" href="#!">Twitter</a></li>
-              <li><a class="white-text" href="#!">Pinterest</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="footer-copyright">
-      </div>
-    </footer>
+                <li><a class="white-text" href="#!">Instagram</a></li>
+                <li><a class="white-text" href="#!">Twitter</a></li>
+                <li><a class="white-text" href="#!">Pinterest</a></li>
+                </ul>
+            </div>
+            </div>
+            </div>
+            <div class="footer-copyright">
+            </div>
+            </footer>
 
-    <!--  Scripts-->
-    <script src="js/materialize.min.js"></script>
-    <script src="js/materialize.js"></script>
-  </body>
+            <!--  Scripts-->
+            <script src="js/materialize.min.js"></script>
+            <script src="js/materialize.js"></script>
+</body>
+
 </html>
