casi termino el home

--- a/index.html
+++ b/index.html
@@ -130,26 +130,47 @@
           </h3>
           <div class="row">
             <div class="col s12 m4">
-              <div class="center" style="position: relative">
-                <div class="combo">
-                  <h4 class="titulo_combo">BASICO</h4>
+              <div class="center contenedorCombos">
+                <a href="" class="botonCombo">
+                <div class="combos">
+                  <h3>BASICO</h3>
+                  <i class="fas fa-star"></i><i class="far fa-star"></i
+                  ><i class="far fa-star"></i>
                 </div>
+                <div class="combos_Informacion">
+                  <p>Combo de productos para el que se inicia en el senderismo</p>
+                </div>
+              </a>
               </div>
             </div>
 
             <div class="col s12 m4">
-              <div class="center" style="position: relative">
-                <div class="combo">              
-                  <h4 class="titulo_combo">MEDIO</h4>
+              <div class="center contenedorCombos">
+                <a href="" class="botonCombo">
+                <div class="combos">
+                  <h3>MEDIO</h3>
+                  <i class="fas fa-star"></i><i class="fas fa-star"></i
+                  ><i class="far fa-star"></i>
                 </div>
+                <div class="combos_Informacion">
+                  <p>Combo estandar de productos para el senderista experimentado</p>
+                </div>
+              </a>
               </div>
             </div>
 
             <div class="col s12 m4">
-              <div class="center" style="position: relative">
-                <div class="combo">
-                  <h4 class="titulo_combo">PRO</h4>
+              <div class="center contenedorCombos">
+                <a href="" class="botonCombo">
+                <div class="combos">
+                  <h3>PRO</h3>
+                  <i class="fas fa-star"></i><i class="fas fa-star"></i
+                  ><i class="fas fa-star"></i>
                 </div>
+                <div class="combos_Informacion">
+                  <p>Combo de productos ideal para el senderista experto</p>
+                </div>
+              </a>
               </div>
             </div>
           </div>
@@ -161,21 +182,20 @@
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
+            <img src="img/logoinvertido.png" class="logo_footer">
             <h5 class="white-text">BIO MOUNTAIN</h5>
-            <p class="grey-text text-lighten-4">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero
-              atque assumenda laborum nihil maiores nulla, perspiciatis
-              molestiae veritatis facere voluptas qui optio aliquam praesentium
-              sit similique ipsa culpa laboriosam officia?
+            <br>
+            <p class="grey-text text-lighten-4" style="font-size: 1em;">
+              Tambien podes encontrarnos en nuestras redes sociales
             </p>
           </div>
           <div class="col l3 s12 right">
             <h5 class="white-text">Redes Sociales</h5>
             <ul>
-              <li><a class="white-text" href="#!">Facebook</a></li>
-              <li><a class="white-text" href="#!">Instagram</a></li>
-              <li><a class="white-text" href="#!">Twitter</a></li>
-              <li><a class="white-text" href="#!">Pinterest</a></li>
+              <li><i class="fab fa-facebook" style="margin-right: 5px;"></i><a class="white-text" href="#!">Facebook</a></li>
+              <li><i class="fab fa-instagram" style="margin-right: 5px;"></i><a class="white-text" href="#!">Instagram</a></li>
+              <li><i class="fab fa-twitter" style="margin-right: 5px;"></i><a class="white-text" href="#!">Twitter</a></li>
+              <li><i class="fab fa-pinterest" style="margin-right: 5px;"></i><a class="white-text" href="#!">Pinterest</a></li>
             </ul>
           </div>
         </div>
