--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
             <div class="col s12 m4">
               <div class="icon-block">
                 <h2 class="center green-text">
-                  <i class="fas fa-shopping-bag icono"></i>
+                  <a href="">
+                    <i class="fas fa-shopping-bag icono"></i>
+                  </a>
                 </h2>
                 <h5 class="center">BOLSAS</h5>
               </div>
@@ -102,7 +104,9 @@
             <div class="col s12 m4">
               <div class="icon-block">
                 <h2 class="center green-text">
-                  <i class="fas fa-wine-bottle icono"></i>
+                  <a href="">
+                    <i class="fas fa-wine-bottle icono"></i>
+                  </a>
                 </h2>
                 <h5 class="center">BOTELLAS</h5>
               </div>
@@ -111,7 +115,9 @@
             <div class="col s12 m4">
               <div class="icon-block">
                 <h2 class="center green-text">
-                  <i class="fas fa-vial icono"></i>
+                  <a href="">
+                    <i class="fas fa-vial icono"></i>
+                  </a>
                 </h2>
                 <h5 class="center">CACATUBO</h5>
               </div>
@@ -132,45 +138,50 @@
             <div class="col s12 m4">
               <div class="center contenedorCombos">
                 <a href="" class="botonCombo">
-                <div class="combos">
-                  <h3>BASICO</h3>
-                  <i class="fas fa-star"></i><i class="far fa-star"></i
-                  ><i class="far fa-star"></i>
-                </div>
-                <div class="combos_Informacion">
-                  <p>Combo de productos para el que se inicia en el senderismo</p>
-                </div>
-              </a>
+                  <div class="combos">
+                    <h3>BASICO</h3>
+                    <i class="fas fa-star"></i><i class="far fa-star"></i
+                    ><i class="far fa-star"></i>
+                  </div>
+                  <div class="combos_Informacion">
+                    <p>
+                      Combo de productos para el que se inicia en el senderismo
+                    </p>
+                  </div>
+                </a>
               </div>
             </div>
 
             <div class="col s12 m4">
               <div class="center contenedorCombos">
                 <a href="" class="botonCombo">
-                <div class="combos">
-                  <h3>MEDIO</h3>
-                  <i class="fas fa-star"></i><i class="fas fa-star"></i
-                  ><i class="far fa-star"></i>
-                </div>
-                <div class="combos_Informacion">
-                  <p>Combo estandar de productos para el senderista experimentado</p>
-                </div>
-              </a>
+                  <div class="combos">
+                    <h3>MEDIO</h3>
+                    <i class="fas fa-star"></i><i class="fas fa-star"></i
+                    ><i class="far fa-star"></i>
+                  </div>
+                  <div class="combos_Informacion">
+                    <p>
+                      Combo estandar de productos para el senderista
+                      experimentado
+                    </p>
+                  </div>
+                </a>
               </div>
             </div>
 
             <div class="col s12 m4">
               <div class="center contenedorCombos">
                 <a href="" class="botonCombo">
-                <div class="combos">
-                  <h3>PRO</h3>
-                  <i class="fas fa-star"></i><i class="fas fa-star"></i
-                  ><i class="fas fa-star"></i>
-                </div>
-                <div class="combos_Informacion">
-                  <p>Combo de productos ideal para el senderista experto</p>
-                </div>
-              </a>
+                  <div class="combos">
+                    <h3>PRO</h3>
+                    <i class="fas fa-star"></i><i class="fas fa-star"></i
+                    ><i class="fas fa-star"></i>
+                  </div>
+                  <div class="combos_Informacion">
+                    <p>Combo de productos ideal para el senderista experto</p>
+                  </div>
+                </a>
               </div>
             </div>
           </div>
@@ -182,20 +193,32 @@
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
-            <img src="img/logoinvertido.png" class="logo_footer">
+            <img src="img/logoinvertido.png" class="logo_footer" />
             <h5 class="white-text">BIO MOUNTAIN</h5>
-            <br>
-            <p class="grey-text text-lighten-4" style="font-size: 1em;">
+            <br />
+            <p class="grey-text text-lighten-4" style="font-size: 1em">
               Tambien podes encontrarnos en nuestras redes sociales
             </p>
           </div>
           <div class="col l3 s12 right">
             <h5 class="white-text">Redes Sociales</h5>
             <ul>
-              <li><i class="fab fa-facebook" style="margin-right: 5px;"></i><a class="white-text" href="#!">Facebook</a></li>
-              <li><i class="fab fa-instagram" style="margin-right: 5px;"></i><a class="white-text" href="#!">Instagram</a></li>
-              <li><i class="fab fa-twitter" style="margin-right: 5px;"></i><a class="white-text" href="#!">Twitter</a></li>
-              <li><i class="fab fa-pinterest" style="margin-right: 5px;"></i><a class="white-text" href="#!">Pinterest</a></li>
+              <li>
+                <i class="fab fa-facebook" style="margin-right: 5px"></i
+                ><a class="white-text" href="#!">Facebook</a>
+              </li>
+              <li>
+                <i class="fab fa-instagram" style="margin-right: 5px"></i
+                ><a class="white-text" href="#!">Instagram</a>
+              </li>
+              <li>
+                <i class="fab fa-twitter" style="margin-right: 5px"></i
+                ><a class="white-text" href="#!">Twitter</a>
+              </li>
+              <li>
+                <i class="fab fa-pinterest" style="margin-right: 5px"></i
+                ><a class="white-text" href="#!">Pinterest</a>
+              </li>
             </ul>
           </div>
         </div>
