--- a/contacto.html
+++ b/contacto.html
@@ -17,16 +17,16 @@
             <div class="nav-wrapper container">
                 <a class="black-text" href="index.html" class=""><img class="logo_Nav" src="img/logoGrande.jpg" /></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a class="a_menu" href="#">Inicio</a></li>
+                    <li><a class="a_menu" href="index.html">Inicio</a></li>
                     <li><a class="a_menu" href="#">Productos</a></li>
-                    <li><a class="a_menu" href="#">Contacto</a></li>
+                    <li><a class="a_menu" href="contacto.html">Contacto</a></li>
                     <li><a class="a_menu" href="#">Sucursales</a></li>
                 </ul>
 
                 <ul id="nav-mobile" class="sidenav">
-                    <li><a class="a_menu" href="#">Inicio</a></li>
+                    <li><a class="a_menu" href="index.html">Inicio</a></li>
                     <li><a class="a_menu" href="#">Productos</a></li>
-                    <li><a class="a_menu" href="#">Contacto</a></li>
+                    <li><a class="a_menu" href="contacto.html">Contacto</a></li>
                     <li><a class="a_menu" href="#">Sucursales</a></li>
                 </ul>
                 <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="black-text material-icons">menu</i></a
@@ -105,29 +105,42 @@
         
       </div>
 
-    <footer class="page-footer green">
-      <div class="container">
-        <div class="row">
-          <div class="col l6 s12">
-            <h5 class="white-text">BIO MOUNTAIN</h5>
-            <p class="grey-text text-lighten-4">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero atque assumenda laborum nihil maiores nulla, perspiciatis molestiae veritatis facere voluptas qui optio aliquam praesentium sit similique ipsa culpa laboriosam officia?
-            </p>
+      <footer class="page-footer green">
+        <div class="container">
+          <div class="row">
+            <div class="col l6 s12">
+              <img src="img/logoinvertido.png" class="logo_footer" />
+              <h5 class="white-text">BIO MOUNTAIN</h5>
+              <br />
+              <p class="grey-text text-lighten-4" style="font-size: 1em">
+                Tambien podes encontrarnos en nuestras redes sociales
+              </p>
+            </div>
+            <div class="col l3 s12 right">
+              <h5 class="white-text">Redes Sociales</h5>
+              <ul>
+                <li>
+                  <i class="fab fa-facebook" style="margin-right: 5px"></i
+                  ><a class="white-text" href="#!">Facebook</a>
+                </li>
+                <li>
+                  <i class="fab fa-instagram" style="margin-right: 5px"></i
+                  ><a class="white-text" href="#!">Instagram</a>
+                </li>
+                <li>
+                  <i class="fab fa-twitter" style="margin-right: 5px"></i
+                  ><a class="white-text" href="#!">Twitter</a>
+                </li>
+                <li>
+                  <i class="fab fa-pinterest" style="margin-right: 5px"></i
+                  ><a class="white-text" href="#!">Pinterest</a>
+                </li>
+              </ul>
+            </div>
           </div>
-          <div class="col l3 s12 right">
-            <h5 class="white-text">Redes Sociales</h5>
-            <ul>
-              <li><a class="white-text" href="#!">Facebook</a></li>
-                <li><a class="white-text" href="#!">Instagram</a></li>
-                <li><a class="white-text" href="#!">Twitter</a></li>
-                <li><a class="white-text" href="#!">Pinterest</a></li>
-                </ul>
-            </div>
-            </div>
-            </div>
-            <div class="footer-copyright">
-            </div>
-            </footer>
+        </div>
+        <div class="footer-copyright"></div>
+      </footer>
 
             <!--  Scripts-->
             <script src="js/materialize.min.js"></script>
