--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
             ><img class="logo_Nav" src="img/logoGrande.jpg"
           /></a>
           <ul class="right hide-on-med-and-down">
-            <li><a class="a_menu" href="#">Inicio</a></li>
+            <li><a class="a_menu" href="index.html">Inicio</a></li>
             <li><a class="a_menu" href="#">Productos</a></li>
-            <li><a class="a_menu" href="#">Contacto</a></li>
+            <li><a class="a_menu" href="contacto.html">Contacto</a></li>
             <li><a class="a_menu" href="#">Sucursales</a></li>
           </ul>
 
           <ul id="nav-mobile" class="sidenav">
-            <li><a class="a_menu" href="#">Inicio</a></li>
+            <li><a class="a_menu" href="index.html">Inicio</a></li>
             <li><a class="a_menu" href="#">Productos</a></li>
-            <li><a class="a_menu" href="#">Contacto</a></li>
+            <li><a class="a_menu" href="contacto.html">Contacto</a></li>
             <li><a class="a_menu" href="#">Sucursales</a></li>
           </ul>
           <a href="#" data-target="nav-mobile" class="sidenav-trigger"
