--- a/index.html
+++ b/index.html
@@ -129,8 +129,7 @@
       <div class="container" style="margin-top: 3%">
         <div class="section">
           <h3
-            class="center brand-logo"
-            style="margin-bottom: 5%; font-size: 4em; margin-top: 0"
+            class="center brand-logo tituloCombos"
           >
             APROVECHA LOS COMBOS BIONDERISTAS
           </h3>
