aparecio la bendita foto

--- a/contacto.html
+++ b/contacto.html
@@ -104,6 +104,7 @@
         </div>
         
       </div>
+      </main>
 
       <footer class="page-footer green">
         <div class="container">
@@ -124,7 +125,7 @@
                   ><a class="white-text" href="#!">Facebook</a>
                 </li>
                 <li>
-                  <i class="fab fa-instagram" style="margin-right: 5px"></i
+                    <i class="fab fa-instagram" style="margin-right: 5px"></i
                   ><a class="white-text" href="#!">Instagram</a>
                 </li>
                 <li>
