--- a/contacto.html
+++ b/contacto.html
@@ -104,6 +104,7 @@
         </div>
         
       </div>
+      </main>
 
       <footer class="page-footer green">
         <div class="container">
