ordenamos el codigo del home

--- a/index.html
+++ b/index.html
@@ -1,232 +1,194 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+
+<head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>BIO MOUNTAIN - Home</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
-      crossorigin="anonymous"
-    />
-    <link
-      href="css/materialize.min.css"
-      type="text/css"
-      rel="stylesheet"
-      media="screen,projection"
-    />
-    <link
-      href="css/estilos.css"
-      type="text/css"
-      rel="stylesheet"
-      media="screen,projection"
-    />
-    <link
-      href="css/materialize.css"
-      type="text/css"
-      rel="stylesheet"
-      media="screen,projection"
-    />
-  </head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link href="css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="css/estilos.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+</head>
 
-  <body>
+<body>
     <header class="nav">
-      <nav class="white" role="navigation">
-        <div class="nav-wrapper container">
-          <a class="black-text" href="index.html" class=""
-            ><img class="logo_Nav" src="img/logoGrande.jpg"
-          /></a>
-          <ul class="right hide-on-med-and-down">
-            <li><a class="a_menu" href="index.html">Inicio</a></li>
-            <li><a class="a_menu" href="#">Productos</a></li>
-            <li><a class="a_menu" href="contacto.html">Contacto</a></li>
-            <li><a class="a_menu" href="#">Sucursales</a></li>
-          </ul>
+        <nav class="white" role="navigation">
+            <div class="nav-wrapper container">
+                <a class="black-text" href="index.html" class=""><img class="logo_Nav" src="img/logoGrande.jpg" /></a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a class="a_menu" href="index.html">Inicio</a></li>
+                    <li><a class="a_menu" href="#">Productos</a></li>
+                    <li><a class="a_menu" href="contacto.html">Contacto</a></li>
+                    <li><a class="a_menu" href="#">Sucursales</a></li>
+                </ul>
 
-          <ul id="nav-mobile" class="sidenav">
-            <li><a class="a_menu" href="index.html">Inicio</a></li>
-            <li><a class="a_menu" href="#">Productos</a></li>
-            <li><a class="a_menu" href="contacto.html">Contacto</a></li>
-            <li><a class="a_menu" href="#">Sucursales</a></li>
-          </ul>
-          <a href="#" data-target="nav-mobile" class="sidenav-trigger"
-            ><i class="black-text material-icons">menu</i></a
-          >
-        </div>
-      </nav>
+                <ul id="nav-mobile" class="sidenav">
+                    <li><a class="a_menu" href="index.html">Inicio</a></li>
+                    <li><a class="a_menu" href="#">Productos</a></li>
+                    <li><a class="a_menu" href="contacto.html">Contacto</a></li>
+                    <li><a class="a_menu" href="#">Sucursales</a></li>
+                </ul>
+                <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="black-text material-icons">menu</i></a>
+            </div>
+        </nav>
     </header>
 
     <main class="main_Home">
-      <div id="index-banner" class="parallax-container">
-        <div class="section no-pad-bot">
-          <div class="container">
-            <br /><br />
-            <h1 class="header center white-text text-lighten-2 titulo_Slider">
-              CONSERVA TU ALIMENTO Y <br />
-              TU MEDIO AMBIENTE
-            </h1>
-            <div class="row center">
-              <h5 class="header col s12 light">
-                El mejor packaging biodegradable y de la mejor calidad
-              </h5>
+        <div id="index-banner" class="parallax-container">
+            <div class="section no-pad-bot">
+                <div class="container">
+                    <br /><br />
+                    <h1 class="header center white-text text-lighten-2 titulo_Slider">
+                        CONSERVA TU ALIMENTO Y <br /> TU MEDIO AMBIENTE
+                    </h1>
+                    <div class="row center">
+                        <h5 class="header col s12 light">
+                            El mejor packaging biodegradable y de la mejor calidad
+                        </h5>
+                    </div>
+                    <div class="row center">
+                        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light lighten-1 boton_ConoceComo">Conoc&eacute; como...</a>
+                    </div>
+                    <br /><br />
+                </div>
             </div>
-            <div class="row center">
-              <a
-                href="http://materializecss.com/getting-started.html"
-                id="download-button"
-                class="btn-large waves-effect waves-light lighten-1 boton_ConoceComo"
-                >Conoc&eacute; como...</a
-              >
+            <div class="parallax">
+                <img src="img/fotohome1.JPG" alt="Unsplashed background img 1" />
             </div>
-            <br /><br />
-          </div>
         </div>
-        <div class="parallax">
-          <img src="img/fotohome1.JPG" alt="Unsplashed background img 1" />
+
+        <div class="container" style="margin-top: 3%">
+            <div class="section">
+                <div class="row">
+                    <div class="col s12 m4">
+                        <div class="icon-block">
+                            <h2 class="center green-text">
+                                <a href="">
+                                    <i class="fas fa-shopping-bag icono"></i>
+                                </a>
+                            </h2>
+                            <h5 class="center">BOLSAS</h5>
+                        </div>
+                    </div>
+
+                    <div class="col s12 m4">
+                        <div class="icon-block">
+                            <h2 class="center green-text">
+                                <a href="">
+                                    <i class="fas fa-wine-bottle icono"></i>
+                                </a>
+                            </h2>
+                            <h5 class="center">BOTELLAS</h5>
+                        </div>
+                    </div>
+
+                    <div class="col s12 m4">
+                        <div class="icon-block">
+                            <h2 class="center green-text">
+                                <a href="">
+                                    <i class="fas fa-vial icono"></i>
+                                </a>
+                            </h2>
+                            <h5 class="center">CACATUBO</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
 
-      <div class="container" style="margin-top: 3%">
-        <div class="section">
-          <div class="row">
-            <div class="col s12 m4">
-              <div class="icon-block">
-                <h2 class="center green-text">
-                  <a href="">
-                    <i class="fas fa-shopping-bag icono"></i>
-                  </a>
-                </h2>
-                <h5 class="center">BOLSAS</h5>
-              </div>
-            </div>
+        <div class="container" style="margin-top: 3%">
+            <div class="section">
+                <h3 class="center brand-logo tituloCombos">
+                    APROVECHA LOS COMBOS BIONDERISTAS
+                </h3>
+                <div class="row">
+                    <div class="col s12 m4">
+                        <div class="center contenedorCombos">
+                            <a href="" class="botonCombo">
+                                <div class="combos">
+                                    <h3>BASICO</h3>
+                                    <i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i>
+                                </div>
+                                <div class="combos_Informacion">
+                                    <p>
+                                        Combo de productos para el que se inicia en el senderismo
+                                    </p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
 
-            <div class="col s12 m4">
-              <div class="icon-block">
-                <h2 class="center green-text">
-                  <a href="">
-                    <i class="fas fa-wine-bottle icono"></i>
-                  </a>
-                </h2>
-                <h5 class="center">BOTELLAS</h5>
-              </div>
-            </div>
+                    <div class="col s12 m4">
+                        <div class="center contenedorCombos">
+                            <a href="" class="botonCombo">
+                                <div class="combos">
+                                    <h3>MEDIO</h3>
+                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
+                                </div>
+                                <div class="combos_Informacion">
+                                    <p>
+                                        Combo estandar de productos para el senderista experimentado
+                                    </p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
 
-            <div class="col s12 m4">
-              <div class="icon-block">
-                <h2 class="center green-text">
-                  <a href="">
-                    <i class="fas fa-vial icono"></i>
-                  </a>
-                </h2>
-                <h5 class="center">CACATUBO</h5>
-              </div>
+                    <div class="col s12 m4">
+                        <div class="center contenedorCombos">
+                            <a href="" class="botonCombo">
+                                <div class="combos">
+                                    <h3>PRO</h3>
+                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                </div>
+                                <div class="combos_Informacion">
+                                    <p>Combo de productos ideal para el senderista experto</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
-
-      <div class="container" style="margin-top: 3%">
-        <div class="section">
-          <h3
-            class="center brand-logo tituloCombos"
-          >
-            APROVECHA LOS COMBOS BIONDERISTAS
-          </h3>
-          <div class="row">
-            <div class="col s12 m4">
-              <div class="center contenedorCombos">
-                <a href="" class="botonCombo">
-                  <div class="combos">
-                    <h3>BASICO</h3>
-                    <i class="fas fa-star"></i><i class="far fa-star"></i
-                    ><i class="far fa-star"></i>
-                  </div>
-                  <div class="combos_Informacion">
-                    <p>
-                      Combo de productos para el que se inicia en el senderismo
-                    </p>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="col s12 m4">
-              <div class="center contenedorCombos">
-                <a href="" class="botonCombo">
-                  <div class="combos">
-                    <h3>MEDIO</h3>
-                    <i class="fas fa-star"></i><i class="fas fa-star"></i
-                    ><i class="far fa-star"></i>
-                  </div>
-                  <div class="combos_Informacion">
-                    <p>
-                      Combo estandar de productos para el senderista
-                      experimentado
-                    </p>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="col s12 m4">
-              <div class="center contenedorCombos">
-                <a href="" class="botonCombo">
-                  <div class="combos">
-                    <h3>PRO</h3>
-                    <i class="fas fa-star"></i><i class="fas fa-star"></i
-                    ><i class="fas fa-star"></i>
-                  </div>
-                  <div class="combos_Informacion">
-                    <p>Combo de productos ideal para el senderista experto</p>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </main>
 
     <footer class="page-footer green">
-      <div class="container">
-        <div class="row">
-          <div class="col l6 s12">
-            <img src="img/logoinvertido.png" class="logo_footer" />
-            <h5 class="white-text">BIO MOUNTAIN</h5>
-            <br />
-            <p class="grey-text text-lighten-4" style="font-size: 1em">
-              Tambien podes encontrarnos en nuestras redes sociales
-            </p>
-          </div>
-          <div class="col l3 s12 right">
-            <h5 class="white-text">Redes Sociales</h5>
-            <ul>
-              <li>
-                <i class="fab fa-facebook" style="margin-right: 5px"></i
-                ><a class="white-text" href="#!">Facebook</a>
-              </li>
-              <li>
-                <i class="fab fa-instagram" style="margin-right: 5px"></i
-                ><a class="white-text" href="#!">Instagram</a>
-              </li>
-              <li>
-                <i class="fab fa-twitter" style="margin-right: 5px"></i
-                ><a class="white-text" href="#!">Twitter</a>
-              </li>
-              <li>
-                <i class="fab fa-pinterest" style="margin-right: 5px"></i
-                ><a class="white-text" href="#!">Pinterest</a>
-              </li>
-            </ul>
-          </div>
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <img src="img/logoinvertido.png" class="logo_footer" />
+                    <h5 class="white-text">BIO MOUNTAIN</h5>
+                    <br />
+                    <p class="grey-text text-lighten-4" style="font-size: 1em">
+                        Tambien podes encontrarnos en nuestras redes sociales
+                    </p>
+                </div>
+                <div class="col l3 s12 right">
+                    <h5 class="white-text">Redes Sociales</h5>
+                    <ul>
+                        <li>
+                            <i class="fab fa-facebook" style="margin-right: 5px"></i><a class="white-text" href="#!">Facebook</a>
+                        </li>
+                        <li>
+                            <i class="fab fa-instagram" style="margin-right: 5px"></i><a class="white-text" href="#!">Instagram</a>
+                        </li>
+                        <li>
+                            <i class="fab fa-twitter" style="margin-right: 5px"></i><a class="white-text" href="#!">Twitter</a>
+                        </li>
+                        <li>
+                            <i class="fab fa-pinterest" style="margin-right: 5px"></i><a class="white-text" href="#!">Pinterest</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="footer-copyright"></div>
+        <div class="footer-copyright"></div>
     </footer>
 
     <!--  Scripts-->
     <script src="js/materialize.min.js"></script>
     <script src="js/materialize.js"></script>
-  </body>
+</body>
+
 </html>
