cambio del fondo en contacto

--- a/contacto.html
+++ b/contacto.html
@@ -41,7 +41,7 @@
             </h1>
             <div class="row center">
                 <h5 class="header col s12 light">
-                    Responderemos las próximas 24 horas
+                    Responderemos en las próximas 24 horas
                 </h5>
             </div>
             <br />
