--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </h5>
                     </div>
                     <div class="row center">
-                        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light lighten-1 boton_ConoceComo">Conoc&eacute; como...</a>
+                        <a href="conoceComo.html" id="download-button" class="btn-large waves-effect waves-light lighten-1 boton_ConoceComo">Conoc&eacute; como...</a>
                     </div>
                     <br /><br />
                 </div>
