--- a/conoceComo.html
+++ b/conoceComo.html
@@ -18,16 +18,16 @@
                 <a class="black-text" href="index.html" class=""><img class="logo_Nav" src="img/logoGrande.jpg" /></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a class="a_menu" href="index.html">Inicio</a></li>
-                    <li><a class="a_menu" href="#">Productos</a></li>
+                    <li><a class="a_menu" href="productos.html">Productos</a></li>
                     <li><a class="a_menu" href="contacto.html">Contacto</a></li>
-                    <li><a class="a_menu" href="#">Sucursales</a></li>
+                    <li><a class="a_menu" href="sucursales.html">Sucursales</a></li>
                 </ul>
 
                 <ul id="nav-mobile" class="sidenav">
                     <li><a class="a_menu" href="index.html">Inicio</a></li>
-                    <li><a class="a_menu" href="#">Productos</a></li>
+                    <li><a class="a_menu" href="productos.html">Productos</a></li>
                     <li><a class="a_menu" href="contacto.html">Contacto</a></li>
-                    <li><a class="a_menu" href="#">Sucursales</a></li>
+                    <li><a class="a_menu" href="sucursales.html">Sucursales</a></li>
                 </ul>
                 <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
                         class="black-text material-icons">menu</i></a>
