--- a/contacto.html
+++ b/contacto.html
@@ -18,18 +18,19 @@
                 <a class="black-text" href="index.html" class=""><img class="logo_Nav" src="img/logoGrande.jpg" /></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a class="a_menu" href="index.html">Inicio</a></li>
-                    <li><a class="a_menu" href="#">Productos</a></li>
-                    <li><a class="a_menu" href="contacto.html">Contacto</a></li>
-                    <li><a class="a_menu" href="#">Sucursales</a></li>
+                    <li><a class="a_menu" href="productos.html">Productos</a></li>
+                    <li class="active"><a class="a_menu" href="contacto.html">Contacto</a></li>
+                    <li><a class="a_menu" href="sucursales.html">Sucursales</a></li>
                 </ul>
 
                 <ul id="nav-mobile" class="sidenav">
                     <li><a class="a_menu" href="index.html">Inicio</a></li>
-                    <li><a class="a_menu" href="#">Productos</a></li>
+                    <li><a class="a_menu" href="productos.html">Productos</a></li>
                     <li><a class="a_menu" href="contacto.html">Contacto</a></li>
-                    <li><a class="a_menu" href="#">Sucursales</a></li>
+                    <li><a class="a_menu" href="sucursales.html">Sucursales</a></li>
                 </ul>
-                <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="black-text material-icons">menu</i></a>
+                <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
+                        class="black-text material-icons">menu</i></a>
             </div>
         </nav>
     </header>
@@ -83,7 +84,8 @@
 
                             <div class="consulta">
                                 <label for="consulta"> CONSULTA<br> </label>
-                                <textarea name="consulta" id="consulta" cols="50" rows="100" required></textarea> <br> <br>
+                                <textarea name="consulta" id="consulta" cols="50" rows="100" required></textarea> <br>
+                                <br>
                             </div>
 
                             <div class="row center">
